--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -11,9 +11,56 @@
   {{ block "css" . }}
 
   {{ end }}
+  <style>
+    .my-footer {
+      background-color: #e3f2fd;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      height: 50px;
+      padding:10px;
+    }
+    p {
+      text-align: justify;
+    }
+  </style>
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="/rooms/generals-quarters">General's Quarters</a></li>
+              <li><a class="dropdown-item" href="/rooms/majors-suite">Major's Suite</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/make-reservation">Book Now</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
   {{ block "content" . }}
 
   {{ end }}
