--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -1,6 +1,6 @@
 {{ template "base" .}}
 {{ define "content" }}
-<div id="carouselExample" class="carousel slide">
+<div id="carouselExample" class="carousel slide carousel-fade">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1" aria-label="Slide 2"></button>
