--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -49,7 +49,7 @@
             <a class="nav-link" href="/contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/make-reservation">Book Now</a>
+            <a class="nav-link" href="/reservation">Book Now</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
