--- a/templates/reservation.page.tmpl
+++ b/templates/reservation.page.tmpl
@@ -7,30 +7,12 @@
         Search for Availability
       </h1>
       <form action="/reservation" method="get" class="needs-validation" novalidate>
-        <div class="row">
+        <div class="row" id="reservation-dates">
           <div class="col">
-            <label for="start_date" class="form-label">Starting Date</label>
-            <input required type="date" class="form-control" name="start_date" id="start_date"
-              aria-describedby="startDateHelp">
-            <div id="startDateHelp" class="form-text">Enter your starting date in the form of YYYY-MM-DD</div>
-            <div class="valid-feedback">
-              Looks good!
-            </div>
-            <div class="invalid-feedback">
-              Please provide a valid date.
-            </div>
+            <input required class="form-control" type="text" name="start" placeholder="arrival">
           </div>
           <div class="col">
-            <label for="end_date" class="form-label">Ending Date</label>
-            <input required type="date" class="form-control" name="end_date" id="end_date"
-              aria-describedby="endDateHelp">
-            <div id="endDateHelp" class="form-text">Enter your ending date in the form of YYYY-MM-DD</div>
-            <div class="valid-feedback">
-              Looks good!
-            </div>
-            <div class="invalid-feedback">
-              Please provide a valid date.
-            </div>
+            <input required class="form-control" type="text" name="end" placeholder="departure">
           </div>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
@@ -54,6 +36,15 @@
     right
   </div>
 </div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const elem = document.getElementById('reservation-dates');
+    const rangepicker = new DateRangePicker(elem, {
+      format: "yyyy-mm-dd",
+    });
+  });
+</script>
 <script>
   (() => {
     'use strict'
@@ -73,5 +64,6 @@
       }, false)
     })
   })()
+
 </script>
 {{ end }}
