--- a/templates/reservation.page.tmpl
+++ b/templates/reservation.page.tmpl
@@ -43,9 +43,8 @@
     const rangepicker = new DateRangePicker(elem, {
       format: "yyyy-mm-dd",
     });
+    notify("Please select your arrival and departure dates", "info");
   });
-</script>
-<script>
   (() => {
     'use strict'
 
@@ -64,6 +63,11 @@
       }, false)
     })
   })()
-
+  function notify(msg,msgType) {
+    notie.alert({
+      type: msgType,
+      text: msg,
+    })
+  }
 </script>
 {{ end }}
