--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -53,19 +53,8 @@
   </div>
   <div class="row">
     <div class="col text-center">
-      <a href="/make-reservation" class="btn btn-success">Make Reservation Now</a>
+      <a href="/search-availability" class="btn btn-success">Search Availability</a>
     </div>
-  </div>
-</div>
-<div class="row my-footer">
-  <div class="col">
-    left
-  </div>
-  <div class="col">
-    middle
-  </div>
-  <div class="col">
-    right
   </div>
 </div>
 {{ end }}
