--- a/templates/majors.page.tmpl
+++ b/templates/majors.page.tmpl
@@ -3,6 +3,11 @@
 <div class="container">
   <div class="row">
     <div class="col">
+      <img src="/static/images/majors-suite.png" class="img-fluid" alt="Generals Suite">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
       <h1 class="text-center mt-4">Majors Suite</h1>
       <p>
         Your home away from home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember.
@@ -15,19 +20,35 @@
   </div>
   <div class="row">
     <div class="col text-center">
-      <a href="/make-reservation" class="btn btn-success">Make Reservation Now</a>
+      <a id="check-availability-button" href="#!" class="btn btn-success">Search Availability</a>
     </div>
   </div>
 </div>
-<div class="row my-footer">
-  <div class="col">
-    left
-  </div>
-  <div class="col">
-    middle
-  </div>
-  <div class="col">
-    right
-  </div>
-</div>
 {{ end }}
+{{define "js"}}
+<script>
+  document.getElementById("check-availability-button").addEventListener("click", function () {
+    let html = `
+        <form id="check-availability-form" action="" method="post" novalidate class="needs-validation">
+            <div class="form-row">
+                <div class="col">
+                    <div class="form-row" id="reservation-dates-modal">
+                        <div class="col">
+                            <input disabled required class="form-control" type="text" name="start" id="start" placeholder="Arrival">
+                        </div>
+                        <div class="col">
+                            <input disabled required class="form-control" type="text" name="end" id="end" placeholder="Departure">
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </form>
+        `;
+    attention.custom({
+      title: 'Choose your dates',
+      msg: html,
+    });
+  })
+</script>
+{{end}}
