--- a/templates/search-availability.page.tmpl
+++ b/templates/search-availability.page.tmpl
@@ -19,55 +19,15 @@
       </form>
     </div>
   </div>
-  <div class="row">
-    <div class="col">
-      <p id="myParagraph">This is a paragraph</p>
-    </div>
-  </div>
 </div>
-<div class="row my-footer">
-  <div class="col">
-    left
-  </div>
-  <div class="col">
-    middle
-  </div>
-  <div class="col">
-    right
-  </div>
-</div>
-
+{{ end }}
+{{ define "js" }}
 <script>
   document.addEventListener('DOMContentLoaded', function () {
     const elem = document.getElementById('reservation-dates');
     const rangepicker = new DateRangePicker(elem, {
       format: "yyyy-mm-dd",
     });
-    notify("Please select your arrival and departure dates", "info");
   });
-  (() => {
-    'use strict'
-
-    // Fetch all the forms we want to apply custom Bootstrap validation styles to
-    const forms = document.querySelectorAll('.needs-validation')
-
-    // Loop over them and prevent submission
-    Array.from(forms).forEach(form => {
-      form.addEventListener('submit', event => {
-        if (!form.checkValidity()) {
-          event.preventDefault()
-          event.stopPropagation()
-        }
-
-        form.classList.add('was-validated')
-      }, false)
-    })
-  })()
-  function notify(msg,msgType) {
-    notie.alert({
-      type: msgType,
-      text: msg,
-    })
-  }
 </script>
 {{ end }}
